python-inheritance/tests/7-base_geometry.txt
>>> import sys
>>> BaseGeometry = __import__('7-base_geometry').BaseGeometry

>>> bg = BaseGeometry()
>>> type(bg)
<class '7-base_geometry.BaseGeometry'>

>>> hasattr(BaseGeometry, 'area')
True

>>> hasattr(BaseGeometry, 'integer_validator')
True

>>> integer_validator(“age”)
  File "<stdin>", line 1
    integer_validator(“age”)
                      ^
SyntaxError: invalid character '“' (U+201C)

>>> BaseGeometry.integer_validator("name", "John", "hola")
Traceback (most recent call last):
    ...
TypeError: John must be an integer

>>> BaseGeometry.integer_validator("name", "age", -0)
Traceback (most recent call last):
    ...
ValueError: age must be greater than 0


>>> BaseGeometry.integer_validator("name", "distance", -4)
Traceback (most recent call last):
    ...
ValueError: distance must be greater than 0